tests/codegen/errors/reader/define-type-asm/atom.reader.error.reader.define.missing.close.after.body/reader-define-missing-close-after-body.mon
;; TEST-ID: tests.codegen.reader-error.reader-define-missing-close-after-body
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/define-type-asm
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' after define body
;; TEST-ATOM: atom.reader.error.reader.define.missing.close.after.body
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.define.missing.close.after.body
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' after define body
;; TEST-READER-PATH: reader.c:3691 parser.define
;; TEST-CODEGEN-PATH: diagnostic.parser.define
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3691 Expected ')' after define body
;; TEST-USES-ATOM: atom.reader.error.reader.define.missing.close.after.body
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.define
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/define-type-asm/atom.reader.error.reader.define.missing.close.after.body
;; TEST-MENU-PATH: codegen/errors/reader/define-type-asm/atom.reader.error.reader.define.missing.close.after.body
;; TEST-ATOM-LEAF: atom.reader.error.reader.define.missing.close.after.body
;; TEST-CLI-TARGET: codegen errors reader define-type-asm

(module Main)
(define (bad [] -> Int) 1
